types: add comment

--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -95,7 +95,7 @@
     "064": "花冠龙",
     "064B": "雷冠龙 (雷+龙)",
     "065": "流沙蛇",
-    "065B": "",
+    "065B": "流沙蛇",
     "066": "噬魂兽",
     "067": "碎岩龟",
     "068": "猫蝠怪",
@@ -114,7 +114,7 @@
     "080": "精灵龙",
     "080B": "水灵龙 (龙)",
     "081": "火灵儿",
-    "081B": "",
+    "081B": "火灵儿",
     "082": "碧海龙",
     "083": "冰棘兽",
     "084": "狱焰王",
