fix: fix cn name

--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -32,7 +32,7 @@
     "012": "电棘鼠",
     "012B": "电棘鼠 (冰)",
     "013": "叶泥泥",
-    "013B": "叶泥泥",
+    "013B": "叶泥泥 B",
     "014": "玉藻狐",
     "015": "啼卡尔",
     "016": "壶小象",
@@ -94,8 +94,8 @@
     "063": "秘斯媞雅",
     "064": "花冠龙",
     "064B": "雷冠龙 (雷+龙)",
-    "065": "流沙蛇",
-    "065B": "流沙蛇",
+    "065": "滑水蛇",
+    "065B": "滑水蛇 B",
     "066": "噬魂兽",
     "067": "碎岩龟",
     "068": "猫蝠怪",
@@ -114,7 +114,7 @@
     "080": "精灵龙",
     "080B": "水灵龙 (龙)",
     "081": "火灵儿",
-    "081B": "火灵儿",
+    "081B": "火灵儿 B",
     "082": "碧海龙",
     "083": "冰棘兽",
     "084": "狱焰王",
